--- a/css/style.css
+++ b/css/style.css
@@ -177,6 +177,10 @@
         font-size: 1.2rem;
         padding: 15px;
     }
+
+    .biodata-wrapper {
+        margin-bottom: 4vh;
+    }
 }
 
 @media (max-width: 480px) {
